--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.39",
     "mongoose": "^6.7.3",
+    "mongoose-sequence": "^5.3.1",
     "nodemon": "^2.0.20"
   }
 }
