스웨거 추가

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "sequelize": "^6.26.0"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0"
   }
 }
